--- a/kafka-pvc.yaml
+++ b/kafka-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: zookeeper-pvc
+  name: kafka-pvc
   namespace: kafka
 spec:
   accessModes:
